--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+version 0.002; 2006-06-15
+
+  * new function use_package_optimistically() to duplicate the "base"
+    pragma's quiet module loading
+
+  * insert missing bracket in documentation for use_module()
+
 version 0.001; 2004-10-29
 
   * new function use_module()
