--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+version 0.003; 2007-01-27
+
+  * loosen tests to work with perl v5.9's changed diagnostics
+
 version 0.002; 2006-06-15
 
   * new function use_package_optimistically() to duplicate the "base"
