--- a/README
+++ b/README
@@ -9,10 +9,10 @@ modules, which are normally handled at compile time.
 
 INSTALLATION
 
-	perl Makefile.PL
-	make
-	make test
-	make install
+	perl Build.PL
+	./Build
+	./Build test
+	./Build install
 
 AUTHOR
 
@@ -21,6 +21,8 @@ Andrew Main (Zefram) <zefram@fysh.org>
 COPYRIGHT
 
 Copyright (C) 2004, 2006, 2007 Andrew Main (Zefram) <zefram@fysh.org>
+
+LICENSE
 
 This module is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
