--- a/Changes
+++ b/Changes
@@ -1,3 +1,16 @@
+version 0.006; 2009-05-19
+
+  * bugfix: avoid unreliable "\w" in regexps in code
+
+  * document that module name syntax is restricted to ASCII
+
+  * use simpler "parent" pragma in place of "base"
+
+  * in documentation, use the term "truth value" instead of the less
+    precise "boolean"
+
+  * use full stricture in Build.PL
+
 version 0.005; 2007-09-17
 
   * bugfix: override any ambient $SIG{__DIE__} handler when using eval { }
