--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+version 0.010; 2011-10-07
+
+  * bugfix: in use_package_optimistically(), fix regexp interpolation
+    that broke operation if the module was loaded from a path containing
+    metacharacters
+
 version 0.009; 2011-10-04
 
   * new function module_notional_filename()
