Import of ZEFRAM/Module-Runtime-0.012 from CPAN.
gitpan-cpan-distribution: Module-Runtime
gitpan-cpan-version:      0.012
gitpan-cpan-path:         ZEFRAM/Module-Runtime-0.012.tar.gz
gitpan-cpan-author:       ZEFRAM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,34 @@
+version 0.012; 2012-02-12
+
+  * work around Perl core bug [perl #68590] regarding leakage of %^H
+    into modules being loaded
+
+  * work around Perl core bug that made a failed module loading appear
+    successful when re-requiring the same module
+
+  * duplicate is_string() from Params::Classify, rather than importing it,
+    to avoid circular dependency problems (affecting both installation
+    and runtime)
+
+  * duplicate minimal exporting behaviour from Exporter, and avoid using
+    the "feature", "warnings", "strict", and "parent" pragmata, to allow
+    for possible future use of this module by any infrastructure module
+
+  * document core bug workarounds
+
+  * document module name syntax more prominently, and discuss the state
+    of Unicode handling
+
+  * tweak documentation of use_package_optimistically()
+
+  * test behaviour with tainted module name
+
+  * test lack of unwanted eval frame around require
+
+  * give test modules more meaningful names
+
+  * convert .cvsignore to .gitignore
+
 version 0.011; 2011-10-24
 
   * bugfix: in require_module() and use_module(), work around a Perl
