--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+version 0.013; 2012-02-16
+
+  * fix false failure of the test for lack of unintended dependencies
+    that occurred on systems using a sitecustomize.pl
+
 version 0.012; 2012-02-12
 
   * work around Perl core bug [perl #68590] regarding leakage of %^H
